Fix layout bug

--- a/src/_app-theme.scss
+++ b/src/_app-theme.scss
@@ -8,7 +8,7 @@
 
 @use './app/shared/components/footer/footer-theme';
 @use './app/shared/components/navbar/navbar-theme';
-// @use './app/shared/components/workshop-viewer/live-example/live-example-theme';
+@use './app/shared/components/workshop-viewer/live-example/live-example-theme';
 
 // Styles for the docs app that are based on the current theme.
 @mixin theme($theme) {
@@ -38,5 +38,5 @@
 
   @include footer-theme.theme($theme);
   @include navbar-theme.theme($theme);
-  // @include live-example-theme.theme($theme);
+  @include live-example-theme.theme($theme);
 }
